Update index.html with new HTML content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ملك 💖</title>
+  <title>بسمه 💖</title>
   <style>
     body {
       margin: 0;
@@ -39,7 +39,7 @@
 </head>
 <body>
 
-  <h1>ملك 💖</h1>
+  <h1>بسمه 💖</h1>
   <p>بمناسبة يوم الحب…</p>
 
   <button onclick="window.location.href='second.html'">اضغط هنا 💞</button>
